# Turbopolar

./: .gitignore  Makefile  README.md  STATUS.md  pyproject.toml
benchmarks/: README.md  artifact_writer.py  cartesian_int8_cache.py  exact_token_fixtures.jsonl  full_model_memory_worker.py  memory_worker.py  prompt_fixtures.py  prompt_suite.jsonl  report_schema.py  report_writer.py  run_cartesian_int8_baseline.py  run_dense_vs_turbopolar.py  run_fast_attention_bench.py  run_fused_forced_decode.py  run_memory_bench.py  run_memory_matrix.py  run_speed_matrix.py  turbopolar_fast_attention.py  turbopolar_mlxlm_cache.py
benchmarks/outputs/: report.json  report.md
docs/: SUPPORTED_CONFIGURATION.md
rfsn_v11/candidates/: turbo_polar_adapter.py  turbo_polar_config.py  turbo_polar_metrics.py  turbo_polar_trace.py
rfsn_v11/evidence/: __init__.py  baseline.py  execution_trace.py  fused_decode.py  memory.py  provenance.py  speed.py  teacher_forced.py
rfsn_v11/generation/: cartesian_int8_paged_cache.py  paged_storage.py  storage.py  turbo_polar_cache.py
rfsn_v11/integrations/mlx_lm/: __init__.py  adapter.py  attention.py  cache.py  llama_adapter.py  llama_attention.py  support.py  telemetry.py
rfsn_v11/kernels/turbo_polar/: execution.py  metal.py  tqpolar_fused_qk.metal  tqpolar_online_attention.metal
rfsn_v11/promotion/: __init__.py  cli.py  gate.py  provenance.py  schema.py
rfsn_v11/quant/polar/: decoder.py  encoder.py  payload.py
rfsn_v11/quant/qjl/: encoder.py  score_estimate.py
rfsn_v11/quant/v_quant/: encoder.py
scripts/: README.md  bench_attention.py  bench_cache_compression.py  check_promotion_gate.py  readme_example.py  release.py  run_promotion_suite.py  smoke_test.py  test_built_wheel.py
tests/: test_promotion_gate.py  test_turbo_polar_cache_runtime.py
tests/benchmarks/: test_run_fused_forced_decode.py  test_run_speed_matrix.py  test_turbo_polar_kernel_qk.py  test_turbo_polar_offline.py  test_turbo_polar_online_attention.py  test_turbo_polar_qjl.py  test_turbopolar_fast_attention.py
tests/integrations/: test_blockwise_prefill.py  test_execution_trace_collection.py  test_fast_cache_boundary.py  test_fast_cache_dense_tail.py  test_fast_cache_mixed.py  test_mlx_lm_adapter.py  test_model_cache_rollover.py  test_model_decode_replay.py  test_unsupported_attention_rejection.py
tests/kernels/: test_fallback_injection.py  test_metal_strict.py  test_paged_online_attention.py  test_qjl_scaled_fused_qk.py  test_qjl_scaled_online_attention.py  test_telemetry_ownership.py
tests/packaging/: test_installed_wheel.py
tests/promotion/: test_dirty_tree_blocks_promotion.py  test_long_context_gates.py  test_missing_evidence_fails.py
tests/unit/: test_cache_invariants.py  test_cartesian_int8_cache.py  test_docs_consistency.py  test_int8_radius_standalone_decode.py  test_memory_accounting.py  test_paged_storage_rollover.py  test_promotion_schema.py  test_prompt_fixtures.py  test_qjl_attention_scaling.py  test_supported_config_contract.py
