[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-polar"
version = "0.3.0.dev0"
description = "TurboPolar: a compressed KV cache for Llama-style MLX models on Apple Silicon"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dawson Block"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.31.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "mlx-lm>=0.19.0",
    "packaging>=21.0",
    "ruff>=0.1.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "mlx-lm>=0.19.0",
    "packaging>=21.0",
]

[project.urls]
Homepage = "https://github.com/dawsonblock/Turbopolar"
Repository = "https://github.com/dawsonblock/Turbopolar"
Issues = "https://github.com/dawsonblock/Turbopolar/issues"

[tool.setuptools.packages.find]
include = ["rfsn_v11*"]

[tool.setuptools.package-data]
"rfsn_v11.kernels.turbo_polar" = ["*.metal"]
"rfsn_v11.kernels.cartesian_int8" = ["*.metal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
